configure the index and improve the security

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Electron</title>
-    <!-- Updated CSP to allow images from countmein.pythonanywhere.com -->
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; connect-src 'self' http://countmein.pythonanywhere.com https://api.github.com https://raw.githubusercontent.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: blob: http://countmein.pythonanywhere.com; script-src 'self' 'unsafe-eval'; worker-src 'self';"
-    />
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://countmein.pythonanywhere.com https://api.github.com https://raw.githubusercontent.com; img-src 'self' data: https: blob: http://countmein.pythonanywhere.com"
+    /> -->
   </head>
 
   <body>
