--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Electron</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://countmein.pythonanywhere.com https://api.github.com https://raw.githubusercontent.com; img-src 'self' data: https: blob: http://countmein.pythonanywhere.com"
